<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_yellow"
        app:title="@string/title_toolbar"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_calculate"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_age"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:background="@color/color_pink"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/title_calc"
        app:layout_constraintEnd_toEndOf="@+id/title_calc"
        app:layout_constraintStart_toStartOf="@+id/title_calc"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_minutes"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/title_age"
        app:layout_constraintStart_toStartOf="@id/title_age"
        app:layout_constraintEnd_toEndOf="@id/title_age"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginTop="25dp"
        android:text="@string/title_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/title_minutes"
        app:layout_constraintStart_toStartOf="@+id/title_calc"
        app:layout_constraintEnd_toEndOf="@id/title_calc"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/button_date"
        app:layout_constraintStart_toStartOf="@id/button_date"
        app:layout_constraintEnd_toEndOf="@id/button_date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_selected_date"
        android:textStyle="bold"
        android:textColor="@color/text_gray_color"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="@id/date"
        app:layout_constraintEnd_toEndOf="@id/date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/result_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/title_selected_date"
        app:layout_constraintStart_toStartOf="@id/title_selected_date"
        app:layout_constraintEnd_toEndOf="@id/title_selected_date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_minutes_till_date"
        android:textStyle="bold"
        android:textColor="@color/text_gray_color"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/result_minutes"
        app:layout_constraintStart_toStartOf="@id/result_minutes"
        app:layout_constraintEnd_toEndOf="@id/result_minutes"/>

</androidx.constraintlayout.widget.ConstraintLayout>